* Fix error message when no guarantee sequence is defined
* Allow to relate a guarantee with multiple sale lines and invoice lines
* Create a draft guarantee when selling a product with guarantee type
* Add workflow on guarantee

Version 3.4.0 - 2014-11-10
* Initial release